--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="container">
             <h1>Tic Tac Toe</h1>
             <div class="grid-container"></div>
+            <div class="win-message"></div>
         </div>
     </div>
     <script src="./js/script.js"></script>
